--- a/Exploration/FTSE 100.ipynb
+++ b/Exploration/FTSE 100.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
        "98            80  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
        "4   Former Employee            Associate  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
        "[34507 rows x 13 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2319,7 @@
        "      <td>Graduate</td>\n",
        "      <td>3i</td>\n",
        "      <td>None</td>\n",
-       "      <td>2020-06-16</td>\n",
+       "      <td>2020-6-16</td>\n",
        "      <td>2020-06-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2336,7 +2336,7 @@
        "      <td>Anonymous Employee</td>\n",
        "      <td>3i</td>\n",
        "      <td>None</td>\n",
-       "      <td>2020-01-04</td>\n",
+       "      <td>2020-1-4</td>\n",
        "      <td>2020-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2421,7 +2421,7 @@
        "      <td>Anonymous Employee</td>\n",
        "      <td>WPP plc</td>\n",
        "      <td>Communication Services</td>\n",
-       "      <td>2018-08-27</td>\n",
+       "      <td>2018-8-27</td>\n",
        "      <td>2018-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2438,7 +2438,7 @@
        "      <td>Senior Project Manager</td>\n",
        "      <td>WPP plc</td>\n",
        "      <td>Communication Services</td>\n",
-       "      <td>2018-08-18</td>\n",
+       "      <td>2018-8-18</td>\n",
        "      <td>2018-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2455,7 +2455,7 @@
        "      <td>Anonymous Employee</td>\n",
        "      <td>WPP plc</td>\n",
        "      <td>Communication Services</td>\n",
-       "      <td>2018-08-16</td>\n",
+       "      <td>2018-8-16</td>\n",
        "      <td>2018-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2472,7 +2472,7 @@
        "      <td>Anonymous Employee</td>\n",
        "      <td>WPP plc</td>\n",
        "      <td>Communication Services</td>\n",
-       "      <td>2018-07-17</td>\n",
+       "      <td>2018-7-17</td>\n",
        "      <td>2018-07-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2489,7 +2489,7 @@
        "      <td>Anonymous Employee</td>\n",
        "      <td>WPP plc</td>\n",
        "      <td>Communication Services</td>\n",
-       "      <td>2018-06-26</td>\n",
+       "      <td>2018-6-26</td>\n",
        "      <td>2018-06-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2550,23 +2550,23 @@
        "34505   Former Employee      Anonymous Employee  WPP plc   \n",
        "34506   Former Employee      Anonymous Employee  WPP plc   \n",
        "\n",
-       "                       Sector       Date Year-Month  \n",
-       "0                        None 2020-06-16 2020-06-01  \n",
-       "1                        None 2020-01-04 2020-01-01  \n",
-       "2                        None 2019-12-12 2019-12-01  \n",
-       "3                        None 2019-10-21 2019-10-01  \n",
-       "4                        None 2019-10-21 2019-10-01  \n",
-       "...                       ...        ...        ...  \n",
-       "34502  Communication Services 2018-08-27 2018-08-01  \n",
-       "34503  Communication Services 2018-08-18 2018-08-01  \n",
-       "34504  Communication Services 2018-08-16 2018-08-01  \n",
-       "34505  Communication Services 2018-07-17 2018-07-01  \n",
-       "34506  Communication Services 2018-06-26 2018-06-01  \n",
+       "                       Sector        Date Year-Month  \n",
+       "0                        None   2020-6-16 2020-06-01  \n",
+       "1                        None    2020-1-4 2020-01-01  \n",
+       "2                        None  2019-12-12 2019-12-01  \n",
+       "3                        None  2019-10-21 2019-10-01  \n",
+       "4                        None  2019-10-21 2019-10-01  \n",
+       "...                       ...         ...        ...  \n",
+       "34502  Communication Services   2018-8-27 2018-08-01  \n",
+       "34503  Communication Services   2018-8-18 2018-08-01  \n",
+       "34504  Communication Services   2018-8-16 2018-08-01  \n",
+       "34505  Communication Services   2018-7-17 2018-07-01  \n",
+       "34506  Communication Services   2018-6-26 2018-06-01  \n",
        "\n",
        "[34507 rows x 14 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2664,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2722,9 +2722,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 7, 1, 0, 0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews_df.D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'datetime.datetime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-98a8fd1ba255>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m reviews_MonthSector = pd.DataFrame(reviews_df[(reviews_df.Date >= min_date) & (reviews_df.Date <= max_date)]\n\u001b[0m\u001b[0;32m      2\u001b[0m  \u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Sector'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Year-Month'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m  \u001b[1;33m.\u001b[0m\u001b[0magg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'count'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'mean'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m )\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops\\common.py\u001b[0m in \u001b[0;36mnew_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     62\u001b[0m         \u001b[0mother\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem_from_zerodim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnew_method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops\\__init__.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    527\u001b[0m         \u001b[0mrvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextract_numpy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    528\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 529\u001b[1;33m         \u001b[0mres_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcomparison_op\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    530\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    531\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_construct_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mres_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mres_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py\u001b[0m in \u001b[0;36mcomparison_op\u001b[1;34m(left, right, op)\u001b[0m\n\u001b[0;32m    245\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mis_object_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[0mres_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcomp_method_OBJECT_ARRAY\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py\u001b[0m in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[1;34m(op, x, y)\u001b[0m\n\u001b[0;32m     55\u001b[0m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlibops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvec_compare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlibops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscalar_compare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\ops.pyx\u001b[0m in \u001b[0;36mpandas._libs.ops.scalar_compare\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'datetime.datetime'"
+     ]
+    }
+   ],
    "source": [
     "reviews_MonthSector = pd.DataFrame(reviews_df[(reviews_df.Date >= min_date) & (reviews_df.Date <= max_date)]\n",
     " .groupby(['Sector', 'Year-Month'])\n",
@@ -2876,7 +2913,21 @@
     }
    ],
    "source": [
+    "# add sector to the DF\n",
     "sectors = reviews_MonthSector.Sector.unique()\n",
+    "\n",
+    "# add 3-month rating average to the DF\n",
+    "reviews_MonthSector['3M_Average']=0\n",
+    "i=0\n",
+    "\n",
+    "for sector in sectors:\n",
+    "    avg = reviews_MonthSector[reviews_MonthSector.Sector==sector].Rating.rolling(window=3).mean()\n",
+    "    \n",
+    "    start = i\n",
+    "    end = i+avg.shape[0]\n",
+    "    reviews_MonthSector.iloc[start:end, -1] = avg\n",
+    "    \n",
+    "    i+=avg.shape[0]\n",
     "\n",
     "reviews_MonthSector"
    ]
