MAIN: added summary stats ntb; minor: some changes to GlassdoorScraper.py

--- a/Exploration/EURO STOXX 50.ipynb
+++ b/Exploration/EURO STOXX 50.ipynb
@@ -1869,6 +1869,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sector\n",
+       "Basic Materials           4\n",
+       "Communication Services    3\n",
+       "Consumer Cyclical         6\n",
+       "Consumer Defensive        5\n",
+       "Energy                    2\n",
+       "Financial Services        9\n",
+       "Healthcare                4\n",
+       "Industrials               7\n",
+       "Real Estate               1\n",
+       "Technology                3\n",
+       "Utilities                 3\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# further analysis focusing only on the companies with at least 10 reviews in the monitored period\n",
+    "min_date = datetime.strptime('2018-7-1', '%Y-%m-%d')\n",
+    "max_date = datetime.strptime('2020-6-30', '%Y-%m-%d')\n",
+    "\n",
+    "reviews_bySector = pd.DataFrame(reviews_df[(reviews_df.Date >= min_date) & (reviews_df.Date <= max_date)]\n",
+    " .groupby(['Company'])\n",
+    " .Rating\n",
+    " .agg(['count'])\n",
+    ")\n",
+    "\n",
+    "reviews_bySector = pd.DataFrame(reviews_bySector.to_records())\n",
+    "\n",
+    "companies['newCount'] = 0\n",
+    "\n",
+    "for row in range(reviews_bySector.shape[0]):\n",
+    "    company, count = reviews_bySector.iloc[row,]['Company'], reviews_bySector.iloc[row,]['count']\n",
+    "    ind = companies[companies.Company==company].index\n",
+    "    companies.loc[ind, 'newCount'] = count\n",
+    "\n",
+    "(companies[companies.newCount>10]\n",
+    " .groupby('Sector')\n",
+    " .count()\n",
+    " .id\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
