--- a/Exploration/FTSE 100 (1).ipynb
+++ b/Exploration/FTSE 100 (1).ipynb
@@ -1732,10 +1732,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
     "reviews = list(\n",
     "    Review\n",
     "    .objects\n",
@@ -1748,10 +1757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
     "reviews_df = pd.DataFrame(\n",
     "    sum([list(reviews_i) for reviews_i in reviews],[])\n",
     ")"
@@ -2653,6 +2671,61 @@
     ")\n",
     "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sector\n",
+       "Basic Materials            9\n",
+       "Communication Services    10\n",
+       "Consumer Cyclical         15\n",
+       "Consumer Defensive        11\n",
+       "Energy                     2\n",
+       "Financial Services        17\n",
+       "Healthcare                 4\n",
+       "Industrials               10\n",
+       "Real Estate                2\n",
+       "Technology                 2\n",
+       "Utilities                  4\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# further analysis focusing only on the companies with at least 10 reviews in the monitored period\n",
+    "min_date = datetime.strptime('2018-7-1', '%Y-%m-%d')\n",
+    "max_date = datetime.strptime('2020-6-30', '%Y-%m-%d')\n",
+    "\n",
+    "reviews_bySector = pd.DataFrame(reviews_df[(reviews_df.Date >= min_date) & (reviews_df.Date <= max_date)]\n",
+    " .groupby(['Company'])\n",
+    " .Rating\n",
+    " .agg(['count'])\n",
+    ")\n",
+    "\n",
+    "reviews_bySector = pd.DataFrame(reviews_bySector.to_records())\n",
+    "\n",
+    "companies['newCount'] = 0\n",
+    "\n",
+    "for row in range(reviews_bySector.shape[0]):\n",
+    "    company, count = reviews_bySector.iloc[row,]['Company'], reviews_bySector.iloc[row,]['count']\n",
+    "    ind = companies[companies.Company==company].index\n",
+    "    companies.loc[ind, 'newCount'] = count\n",
+    "\n",
+    "(companies[companies.newCount>10]\n",
+    " .groupby('Sector')\n",
+    " .count()\n",
+    " .id\n",
+    ")"
    ]
   },
   {
