updated SentimentScore_Rating and started SentimentScore_Reviews

--- a/Exploration/Summary Statistics.ipynb
+++ b/Exploration/Summary Statistics.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "[403065 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1657,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2540,156 +2542,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews_MonthSector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 Weighted 3M average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sector</th>\n",
-       "      <th>Year-Month</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>3M_Average</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Basic Materials</td>\n",
-       "      <td>2018-07-01</td>\n",
-       "      <td>3.507772</td>\n",
-       "      <td>193</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Basic Materials</td>\n",
-       "      <td>2018-08-01</td>\n",
-       "      <td>3.418079</td>\n",
-       "      <td>177</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Basic Materials</td>\n",
-       "      <td>2018-09-01</td>\n",
-       "      <td>3.574627</td>\n",
-       "      <td>134</td>\n",
-       "      <td>3.500159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Basic Materials</td>\n",
-       "      <td>2018-10-01</td>\n",
-       "      <td>3.450980</td>\n",
-       "      <td>153</td>\n",
-       "      <td>3.481229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Basic Materials</td>\n",
-       "      <td>2018-11-01</td>\n",
-       "      <td>3.510949</td>\n",
-       "      <td>137</td>\n",
-       "      <td>3.512185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>2020-02-01</td>\n",
-       "      <td>3.560345</td>\n",
-       "      <td>116</td>\n",
-       "      <td>3.567388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>260</th>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>3.747664</td>\n",
-       "      <td>107</td>\n",
-       "      <td>3.659100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>2020-04-01</td>\n",
-       "      <td>3.859155</td>\n",
-       "      <td>71</td>\n",
-       "      <td>3.722388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>2020-05-01</td>\n",
-       "      <td>3.583333</td>\n",
-       "      <td>96</td>\n",
-       "      <td>3.730051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>2020-06-01</td>\n",
-       "      <td>3.644860</td>\n",
-       "      <td>107</td>\n",
-       "      <td>3.695783</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>264 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              Sector Year-Month    Rating  Count  3M_Average\n",
-       "0    Basic Materials 2018-07-01  3.507772    193         NaN\n",
-       "1    Basic Materials 2018-08-01  3.418079    177         NaN\n",
-       "2    Basic Materials 2018-09-01  3.574627    134    3.500159\n",
-       "3    Basic Materials 2018-10-01  3.450980    153    3.481229\n",
-       "4    Basic Materials 2018-11-01  3.510949    137    3.512185\n",
-       "..               ...        ...       ...    ...         ...\n",
-       "259        Utilities 2020-02-01  3.560345    116    3.567388\n",
-       "260        Utilities 2020-03-01  3.747664    107    3.659100\n",
-       "261        Utilities 2020-04-01  3.859155     71    3.722388\n",
-       "262        Utilities 2020-05-01  3.583333     96    3.730051\n",
-       "263        Utilities 2020-06-01  3.644860    107    3.695783\n",
-       "\n",
-       "[264 rows x 5 columns]"
+       "[1, 3, 5, 7]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews_MonthSector"
+    "s = '1| 3 | 5|7'\n",
+    "\n",
+    "[int(x.strip()) for x in s.split('|')]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
