initialised R file for downloading the data thru Bloomberg API + some other stuff

--- a/Exploration/Summary Statistics.ipynb
+++ b/Exploration/Summary Statistics.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "    list(\n",
     "        Company\n",
     "        .objects\n",
-    "        .values('id', 'Company', 'Sector', 'ListedOn')\n",
+    "        .values('id', 'Company', 'Symbol', 'Sector', 'ListedOn')\n",
     "        .all()\n",
     "    )\n",
     ")\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "\"\\nfor i in range(reviews_df.shape[0]):\\n    row = dict(reviews_df.iloc[i,:])\\n    \\n    review = (\\n        Review\\n        .objects\\n        .values('id', 'JobTitle' ,'EmployeeRelationship')\\n        .get(id=row['id'])\\n    )\\n    \\n    if review['JobTitle'] in ['Former Employee', 'Current Employee']:\\n        new_jobTitle = review['EmployeeRelationship']\\n        new_relationship = review['JobTitle']\\n        \\n        (Review\\n         .objects\\n         .filter(id=row['id'])\\n         .update(\\n             JobTitle = new_jobTitle,\\n             EmployeeRelationship = new_relationship\\n         )\\n        )\\n    else:\\n        pass\\n    \\n    if (i+1)%100==0:\\n        print(i+1)\\n\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "[403065 rows x 16 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -946,7 +946,7 @@
        "[392555 rows x 17 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "6  employee discount 40-60% most items excluding ...           396  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1355,6 +1355,16 @@
     "companies_filtered_df = companies[companies.Company.isin(companies_filtered)]\n",
     "companies_filtered_df['TotalReviews'] = 0\n",
     "companies_filtered_df['TotalReviews'] = [reviewsPerCompany.loc[company] for company in companies_filtered_df.Company]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## save the filtered companies as Company name, symbol\n",
+    "companies_filtered_df[['Company', 'Symbol', 'ListedOn']].to_excel('C:\\\\Data\\\\UCL\\\\companies_bonds.xlsx')"
    ]
   },
   {
