a big chunk of updates... lost here tbh

--- a/Exploration/Bloomberg API.ipynb
+++ b/Exploration/Bloomberg API.ipynb
@@ -2,120 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "from __future__ import absolute_import\n",
-    "\n",
-    "import blpapi\n",
-    "from optparse import OptionParser\n",
-    "\n",
-    "def parseCmdLine():\n",
-    "    parser = OptionParser(description=\"Retrieve reference data.\")\n",
-    "    parser.add_option(\"-a\",\n",
-    "                      \"--ip\",\n",
-    "                      dest=\"host\",\n",
-    "                      metavar=\"ipAddress\",\n",
-    "                      default=\"localhost\")\n",
-    "    parser.add_option(\"-p\",\n",
-    "                      dest=\"port\",\n",
-    "                      type=\"int\",\n",
-    "                      metavar=\"tcpPort\",\n",
-    "                      default=8194)\n",
-    "\n",
-    "    (options, args) = parser.parse_args()\n",
-    "\n",
-    "    return options\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    options = parseCmdLine()\n",
-    "\n",
-    "    # Fill SessionOptions\n",
-    "    sessionOptions = blpapi.SessionOptions()\n",
-    "    sessionOptions.setServerHost(options.host)\n",
-    "    sessionOptions.setServerPort(options.port)"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\n",
+    "    'C:\\\\Data\\\\UCL\\\\companies_bonds_list.csv',\n",
+    "     error_bad_lines=False,\n",
+    ")['DATA_unlist']\n",
+    "\n",
+    "companies = pd.read_csv(\n",
+    "    'C:\\\\Data\\\\UCL\\\\companies_bonds.csv',\n",
+    "     error_bad_lines=False,\n",
+    "     sep=';'\n",
+    ")['Company']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Usage: ipykernel_launcher.py [options]\n",
-      "\n",
-      "ipykernel_launcher.py: error: no such option: -f\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1387, in parse_args\n",
-      "    stop = self._process_args(largs, rargs, values)\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1431, in _process_args\n",
-      "    self._process_short_opts(rargs, values)\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1513, in _process_short_opts\n",
-      "    raise BadOptionError(opt)\n",
-      "optparse.BadOptionError: no such option: -f\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3331, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-4-263240bbee7e>\", line 1, in <module>\n",
-      "    main()\n",
-      "  File \"<ipython-input-3-bb5f282a0f4e>\", line 26, in main\n",
-      "    options = parseCmdLine()\n",
-      "  File \"<ipython-input-3-bb5f282a0f4e>\", line 20, in parseCmdLine\n",
-      "    (options, args) = parser.parse_args()\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1389, in parse_args\n",
-      "    self.error(str(err))\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1569, in error\n",
-      "    self.exit(2, \"%s: error: %s\\n\" % (self.get_prog_name(), msg))\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\optparse.py\", line 1559, in exit\n",
-      "    sys.exit(status)\n",
-      "SystemExit: 2\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1148, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 316, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 350, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"C:\\Users\\danie\\Anaconda3\\lib\\inspect.py\", line 1500, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "AttributeError: 'tuple' object has no attribute 'tb_frame'\n"
+      "ABT 1.15 01/30/2028<corp>\n"
      ]
     },
     {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "main()"
+    "s = data[0]\n",
+    "print(s)\n",
+    "\n",
+    "[1 if len(re.findall('ABT (.+?) (.+?)/(.+?)/(.+?)<corp>', s))>0 else 0 for s in data[:20]]"
    ]
   },
   {
