initialised folder containing script computing results

--- a/Exploration/Summary - Companies issuing bonds.ipynb
+++ b/Exploration/Summary - Companies issuing bonds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "# data paths\n",
-    "bond_path = 'C:\\\\Data\\\\UCL\\\\@MSc Project - Data and sources\\\\List of bonds\\\\Bond_dataset.csv'\n",
+    "bond_path = 'C:\\\\Data\\\\UCL\\\\@MSc Project - Data and sources\\\\List of bonds\\\\Bond_EURO_dataset.csv'\n",
     "company_path = 'C:\\\\Data\\\\UCL\\\\@MSc Project - Data and sources\\\\Sentiment results\\\\companies_filtered.csv'\n",
     "\n",
     "# load data\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,92 +57,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Basic Materials</th>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Communication Services</th>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Consumer Cyclical</th>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Consumer Defensive</th>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Energy</th>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Financial Services</th>\n",
-       "      <td>58</td>\n",
-       "      <td>58</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Healthcare</th>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Industrials</th>\n",
-       "      <td>46</td>\n",
-       "      <td>46</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Real Estate</th>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Technology</th>\n",
-       "      <td>46</td>\n",
-       "      <td>46</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Utilities</th>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        id  Company  ListedOn\n",
-       "Sector                                       \n",
-       "Basic Materials         14       14        14\n",
-       "Communication Services  15       15        15\n",
-       "Consumer Cyclical       43       43        43\n",
-       "Consumer Defensive      25       25        25\n",
-       "Energy                  20       20        20\n",
-       "Financial Services      58       58        58\n",
-       "Healthcare              45       45        45\n",
-       "Industrials             46       46        46\n",
-       "Real Estate             15       15        15\n",
-       "Technology              46       46        46\n",
-       "Utilities               23       23        23"
+       "                   id  Company  ListedOn\n",
+       "Sector                                  \n",
+       "Consumer Cyclical   1        1         1\n",
+       "Technology          2        2         2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total companies: 350\n"
+      "Total companies: 3\n"
      ]
     }
    ],
