--- a/Exploration/Corporate Bond Dataset - Statistics.ipynb
+++ b/Exploration/Corporate Bond Dataset - Statistics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,8 @@
     "ftse_bonds['Date'] = pd.to_datetime(ftse_bonds['Date'])\n",
     "euro_bonds['Date'] = pd.to_datetime(euro_bonds['Date'])\n",
     "\n",
+    "sp_bonds['Interest'] = sp_bonds['Bond'].apply(lambda x: float(x.split()[1]))\n",
+    "\n",
     "# filter the data\n",
     "sp_bonds = (\n",
     "    sp_bonds[(sp_bonds.Date >= min_date) & (sp_bonds.Date <= max_date)]\n",
@@ -67,216 +69,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Bond</th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Ask_price</th>\n",
-       "      <th>Bid_price</th>\n",
-       "      <th>Spread</th>\n",
-       "      <th>Maturity</th>\n",
-       "      <th>TTM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ABT 1.15 01/30/2028 CORP</td>\n",
-       "      <td>Abbott Laboratories</td>\n",
-       "      <td>ABT</td>\n",
-       "      <td>2020-06-30</td>\n",
-       "      <td>100.470</td>\n",
-       "      <td>100.184</td>\n",
-       "      <td>58.779</td>\n",
-       "      <td>2028-01-30</td>\n",
-       "      <td>7.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ABT 1.15 01/30/2028 CORP</td>\n",
-       "      <td>Abbott Laboratories</td>\n",
-       "      <td>ABT</td>\n",
-       "      <td>2020-07-31</td>\n",
-       "      <td>102.747</td>\n",
-       "      <td>102.459</td>\n",
-       "      <td>38.225</td>\n",
-       "      <td>2028-01-30</td>\n",
-       "      <td>7.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>ABT 4.9 11/30/2046 CORP</td>\n",
-       "      <td>Abbott Laboratories</td>\n",
-       "      <td>ABT</td>\n",
-       "      <td>2018-04-30</td>\n",
-       "      <td>108.022</td>\n",
-       "      <td>107.699</td>\n",
-       "      <td>129.934</td>\n",
-       "      <td>2046-11-30</td>\n",
-       "      <td>28.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>ABT 4.9 11/30/2046 CORP</td>\n",
-       "      <td>Abbott Laboratories</td>\n",
-       "      <td>ABT</td>\n",
-       "      <td>2018-05-31</td>\n",
-       "      <td>107.798</td>\n",
-       "      <td>107.480</td>\n",
-       "      <td>141.205</td>\n",
-       "      <td>2046-11-30</td>\n",
-       "      <td>28.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>ABT 4.9 11/30/2046 CORP</td>\n",
-       "      <td>Abbott Laboratories</td>\n",
-       "      <td>ABT</td>\n",
-       "      <td>2018-06-30</td>\n",
-       "      <td>107.677</td>\n",
-       "      <td>107.362</td>\n",
-       "      <td>145.022</td>\n",
-       "      <td>2046-11-30</td>\n",
-       "      <td>28.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76854</th>\n",
-       "      <td>ZTS 4.45 08/20/2048 CORP</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2020-03-31</td>\n",
-       "      <td>120.875</td>\n",
-       "      <td>119.685</td>\n",
-       "      <td>206.902</td>\n",
-       "      <td>2048-08-20</td>\n",
-       "      <td>28.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76855</th>\n",
-       "      <td>ZTS 4.45 08/20/2048 CORP</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2020-04-30</td>\n",
-       "      <td>129.601</td>\n",
-       "      <td>128.303</td>\n",
-       "      <td>169.881</td>\n",
-       "      <td>2048-08-20</td>\n",
-       "      <td>28.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76856</th>\n",
-       "      <td>ZTS 4.45 08/20/2048 CORP</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>126.801</td>\n",
-       "      <td>125.546</td>\n",
-       "      <td>168.883</td>\n",
-       "      <td>2048-08-20</td>\n",
-       "      <td>28.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76857</th>\n",
-       "      <td>ZTS 4.45 08/20/2048 CORP</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2020-06-30</td>\n",
-       "      <td>130.225</td>\n",
-       "      <td>128.928</td>\n",
-       "      <td>152.926</td>\n",
-       "      <td>2048-08-20</td>\n",
-       "      <td>28.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76858</th>\n",
-       "      <td>ZTS 4.45 08/20/2048 CORP</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2020-07-31</td>\n",
-       "      <td>139.836</td>\n",
-       "      <td>138.411</td>\n",
-       "      <td>133.727</td>\n",
-       "      <td>2048-08-20</td>\n",
-       "      <td>28.07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>44044 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           Bond              Company Symbol       Date  \\\n",
-       "0      ABT 1.15 01/30/2028 CORP  Abbott Laboratories    ABT 2020-06-30   \n",
-       "1      ABT 1.15 01/30/2028 CORP  Abbott Laboratories    ABT 2020-07-31   \n",
-       "19      ABT 4.9 11/30/2046 CORP  Abbott Laboratories    ABT 2018-04-30   \n",
-       "20      ABT 4.9 11/30/2046 CORP  Abbott Laboratories    ABT 2018-05-31   \n",
-       "21      ABT 4.9 11/30/2046 CORP  Abbott Laboratories    ABT 2018-06-30   \n",
-       "...                         ...                  ...    ...        ...   \n",
-       "76854  ZTS 4.45 08/20/2048 CORP               Zoetis    ZTS 2020-03-31   \n",
-       "76855  ZTS 4.45 08/20/2048 CORP               Zoetis    ZTS 2020-04-30   \n",
-       "76856  ZTS 4.45 08/20/2048 CORP               Zoetis    ZTS 2020-05-31   \n",
-       "76857  ZTS 4.45 08/20/2048 CORP               Zoetis    ZTS 2020-06-30   \n",
-       "76858  ZTS 4.45 08/20/2048 CORP               Zoetis    ZTS 2020-07-31   \n",
-       "\n",
-       "       Ask_price  Bid_price   Spread    Maturity    TTM  \n",
-       "0        100.470    100.184   58.779  2028-01-30   7.59  \n",
-       "1        102.747    102.459   38.225  2028-01-30   7.50  \n",
-       "19       108.022    107.699  129.934  2046-11-30  28.61  \n",
-       "20       107.798    107.480  141.205  2046-11-30  28.52  \n",
-       "21       107.677    107.362  145.022  2046-11-30  28.44  \n",
-       "...          ...        ...      ...         ...    ...  \n",
-       "76854    120.875    119.685  206.902  2048-08-20  28.41  \n",
-       "76855    129.601    128.303  169.881  2048-08-20  28.33  \n",
-       "76856    126.801    125.546  168.883  2048-08-20  28.24  \n",
-       "76857    130.225    128.928  152.926  2048-08-20  28.16  \n",
-       "76858    139.836    138.411  133.727  2048-08-20  28.07  \n",
-       "\n",
-       "[44044 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Month return: 0.4906 %.\n",
+      "Annualised return: 6.048 %.\n"
+     ]
     }
    ],
    "source": [
-    "sp_bonds"
+    "sp_bonds['Price'] = (sp_bonds['Ask_price'] + sp_bonds['Bid_price']) / 2\n",
+    "\n",
+    "month_return = pd.pivot_table(\n",
+    "    data=sp_bonds,\n",
+    "    values='Price',\n",
+    "    columns='Date',\n",
+    "    index='Bond'\n",
+    ").T.rolling(window=2).apply(lambda x: (100*x.iloc[1]/x.iloc[0] - 100) / 100).T.mean(axis=0).mean()\n",
+    "\n",
+    "print(f'Month return: {100*month_return:.4f} %.')\n",
+    "\n",
+    "annualised_return = ((1 + month_return)**12 - 1)\n",
+    "\n",
+    "print(f'Annualised return: {100*annualised_return:.3f} %.')"
    ]
   },
   {
