--- a/Exploration/Corporate Bond Dataset - Statistics.ipynb
+++ b/Exploration/Corporate Bond Dataset - Statistics.ipynb
@@ -39,37 +39,20 @@
     "sp_bonds = pd.read_csv(\n",
     "    join(global_path, 'Bond_dataset.csv')\n",
     ")\n",
-    "ftse_bonds = pd.read_csv(\n",
-    "    join(global_path, 'Bond_FTSE_dataset.csv')\n",
-    ")\n",
-    "euro_bonds = pd.read_csv(\n",
-    "    join(global_path, 'Bond_EURO_dataset.csv')\n",
-    ")\n",
     "\n",
     "# explicitlity enforce Date column to have date format\n",
     "sp_bonds['Date'] = pd.to_datetime(sp_bonds['Date'])\n",
-    "ftse_bonds['Date'] = pd.to_datetime(ftse_bonds['Date'])\n",
-    "euro_bonds['Date'] = pd.to_datetime(euro_bonds['Date'])\n",
-    "\n",
     "sp_bonds['Interest'] = sp_bonds['Bond'].apply(lambda x: float(x.split()[1]))\n",
     "\n",
     "# filter the data\n",
     "sp_bonds = (\n",
     "    sp_bonds[(sp_bonds.Date >= min_date) & (sp_bonds.Date <= max_date)]\n",
-    ")\n",
-    "\n",
-    "ftse_bonds = (\n",
-    "    ftse_bonds[(ftse_bonds.Date >= min_date) & (ftse_bonds.Date <= max_date)]\n",
-    ")\n",
-    "\n",
-    "euro_bonds = (\n",
-    "    euro_bonds[(euro_bonds.Date >= min_date) & (euro_bonds.Date <= max_date)]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +78,105 @@
     "\n",
     "annualised_return = ((1 + month_return)**12 - 1)\n",
     "\n",
+    "\n",
     "print(f'Annualised return: {100*annualised_return:.3f} %.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63308 Date\n",
+      "2018-04-30    2261\n",
+      "2018-05-31    2261\n",
+      "2018-06-30    2261\n",
+      "2018-07-31    2261\n",
+      "2018-08-31    2261\n",
+      "2018-09-30    2261\n",
+      "2018-10-31    2261\n",
+      "2018-11-30    2261\n",
+      "2018-12-31    2261\n",
+      "2019-01-31    2261\n",
+      "2019-02-28    2261\n",
+      "2019-03-31    2261\n",
+      "2019-04-30    2261\n",
+      "2019-05-31    2261\n",
+      "2019-06-30    2261\n",
+      "2019-07-31    2261\n",
+      "2019-08-31    2261\n",
+      "2019-09-30    2261\n",
+      "2019-10-31    2261\n",
+      "2019-11-30    2261\n",
+      "2019-12-31    2261\n",
+      "2020-01-31    2261\n",
+      "2020-02-29    2261\n",
+      "2020-03-31    2261\n",
+      "2020-04-30    2261\n",
+      "2020-05-31    2261\n",
+      "2020-06-30    2261\n",
+      "2020-07-31    2261\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "return_table = pd.pivot_table(\n",
+    "    data=sp_bonds,\n",
+    "    values='Price',\n",
+    "    columns='Date',\n",
+    "    index='Bond'\n",
+    ")\n",
+    "\n",
+    "table_size = return_table.shape[0] * return_table.shape[1]\n",
+    "\n",
+    "non_nan = return_table.notnull().count()\n",
+    "\n",
+    "print(table_size, non_nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44044"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_table.notnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2261, 28)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_table.shape"
    ]
   },
   {
